Added `getDelistSchedule` method to fetch delisting schedules and updated `LambdaTradeProcessor` to include delisted pairs in forbidden pairs logic.